# detection-score

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
detection_score/: __init__.py  avds_calculator.py  avds_pipeline.py  calibrate.py  cli.py  detect.py
