[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "detection-score"
version = "0.1.0"
description = "Calibrated somatic variant detection score: AVDS quality score with a false-positive-rate-calibrated decision threshold."
readme = false
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "A. Akkus" }, { name = "O. Ozdemir" }]
dependencies = [
    "pysam>=0.22",
    "numpy>=1.24",
    "pandas>=2.0",
    "tqdm>=4.65",
]

[project.scripts]
detection-score = "detection_score.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["detection_score*"]
